--- a/Pagr/Pagr.csproj
+++ b/Pagr/Pagr.csproj
@@ -2,23 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>0.0.1</Version>
     <Description>
-      Sieve is a simple, clean, and extensible framework for .NET Core that adds sorting, filtering, and pagination functionality out of the box. Most common use case would be for serving ASP.NET Core GET queries. Documentation available on GitHub: https://github.com/Biarity/Sieve/
+      Pagr (based on Sieve) is a simple, clean, and extensible framework for .NET Core that adds sorting, filtering, 
+      and pagination functionality out of the box. Most common use case would be for serving ASP.NET Core GET queries.
+      Documentation available on GitHub: https://github.com/ITDancer13/Pagr
     </Description>
-    <Copyright>Copyright 2018</Copyright>
-    <PackageLicenseUrl></PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/Biarity/Sieve</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/ITDancer13/Pagr/blob/master/LICENSE.txt</PackageLicenseUrl>
     <IsPackable>true</IsPackable>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Authors>t.b.d.</Authors>
-    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-    <RepositoryUrl>https://github.com/Biarity/Sieve</RepositoryUrl>
+    <Authors>2018 Biarity, 2021 Kevin Sommer</Authors>    
+    <RepositoryUrl>https://github.com/ITDancer13/Pagr</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -30,12 +28,5 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.14" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\LICENSE.txt">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
-
+  
 </Project>
